demos/grpc/kube/base/envoy.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  demo-grpc-envoy
  labels:
    component: envoy
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: demo-grpc-envoy
        component: envoy
    spec:
      containers:
        - image:  envoyproxy/envoy:v1.9.1
          imagePullPolicy: IfNotPresent
          name: envoy
          command: ["/usr/local/bin/envoy", "-c", "/etc/envoy/envoy.yaml", "-l", "trace", "--log-path", "/tmp/envoy_info.log"]
          volumeMounts:
            - mountPath: /etc/envoy/
              name: envoy-config
          ports:
            - containerPort:  9999
              name:  health
            - containerPort: 8100
              name: data
          resources:
            limits:
              memory: "128Mi"
              cpu: "125m"
      volumes:
        - name: envoy-config
          configMap: 
            name: envoy-config
            defaultMode: 0444
      restartPolicy: Always
