demos/grpc/kube/base/envoy.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: demo-grpc-envoy
spec:
  rules:
  - host: apps.v2tools.com
    http:
      paths:
      - path: /presentations/demo/grpc/api
        backend:
          serviceName: demo-grpc-users
          servicePort: data
        
  tls:
  - hosts:
    - apps.v2tools.com
    secretName: apps-v2tools-crt
